--- a/page10/article.html
+++ b/page10/article.html
@@ -77,7 +77,7 @@
 
 			<section class="listeart">
 
-			<a href="../page3/Doudous.html" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2" title="Cliquer pour afficher l'image en grand"> </a>
+			<a href="doudous1/peluche12.jpg" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2" title="Cliquer pour afficher l'image en grand"> </a>
 
 			<div id="carte"> 
 
