--- a/page3/Doudous.html
+++ b/page3/Doudous.html
@@ -1,4 +1,5 @@
-<!DOCTYPE>
+<!doctype html>
+
 <html>
 
 <head>
@@ -20,10 +21,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<a style="text-decoration:none" href="../page9/panier.html"> <p id="panier">  PANIER </p> </a> 
+		</div>
 
 
 	</header> 
@@ -31,10 +32,11 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
+			 <li> <a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" >ACCUEIL</a> </li> 
+			 <li><a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> PROMOTIONS </a>
+			 </li> 
+			 <li> <a id = "third" style="text-decoration:none" href="../page3/Doudous.html" >DOUDOUS </a></li> 
+			 <li><a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> QUI SOMMES-NOUS ? </a></li> 
 			
 		</ul>
 
@@ -42,29 +44,29 @@
 
 	<main>
 
-		<article id="articles">
+   	<nav id="articles">
 
-			<section class="listeart">
+			<div class="listeart">
 
-			<a href="../page10/article.html" style="text-decoration:none"> <img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "peluche11.jpg" alt = "lienfacebook"> <p>Cochon rose à la peau très douce, aime particulièrement la boue </p> <p class="prix"> 30€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche12.jpg" alt = "lienfacebook"> <p>Cochon sauvage qui n'apprécie que les enfants bagarreurs</p> <p class="prix"> 25€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche13.jpg" alt = "lienfacebook"> <p>Doudou singe qui aime s'accrocher à votre cou; attention il lui arrive parfois d'étrangler !</p> <p class="prix"> 19,99€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche14.jpg" alt = "lienfacebook"> <p>Doudou hipster, pour les enfants raffinés et qui ne bavent pas</p> <p class="prix"> 59,99€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche15.jpg" alt = "lienfacebook"> <p>Doudou lapin qui n'aime pas les carottes</p> <p class="prix"> 20€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche16.jpg" alt = "lienfacebook"> <p>Doudou lapin cousin du lapin d'à côté; attention, ne pas les acheter ensemble !</p> <p class="prix"> 20€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche17.jpg" alt = "lienfacebook"> <p>Doudou rose qui se tient debout tout seul </p> <p class="prix"> 31€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche18.jpg" alt = "lienfacebook"> <p>Doudou chaton qui fait semblant d'être mignon alors que c'est tout le contraire</p> <p class="prix"> 69€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "peluche19.jpg" alt = "lienfacebook"> <p>Doudou intello qui fera des calculs à la place de votre enfant; attention, ce doudou s'amuse beaucoup trop devant Des Chiffres et des Lettres </p> <p class="prix"> 45€ </p> </a>
 
-			</section>
+			</div>
 
 			<div id="ordre"> 
 
@@ -73,13 +75,14 @@
 										
 										
 			<p class="trier"> Tri <select> <option>--</option> <option>Le moins cher</option> <option>Le plus cher</option> <option>De A à Z </option> <option>De Z à A </option> <option>De A à Z </option> </select>  </p>
+
 			</div>
 
 			<div class="titreart"> 
 			<p> Nos produits </p>
 			</div>
 
-		</article>
+	</nav>
 
 
 	</main>
@@ -90,13 +93,13 @@
 	<footer>
 
 		<div class="avis">
-			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
+			<a style="text-decoration:none" href="../page5/commentaire.html"><p> Votre avis </p>
 			<img src = "pouce.png" alt = "avisclient"></a>
 
 		</div>
 
 		<div class="contact">
-			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
+			<a style="text-decoration:none" href="../page7/contacter.html"><p> Nous contacter </p>
 			<img src = "telephone.png" alt = "contactent"></a>
 		</div>
 
