--- a/page4/Promotions.html
+++ b/page4/Promotions.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,10 +20,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a>
+		</div>
 
 
 	</header> 
@@ -31,10 +31,10 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
+			 <li><a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > ACCUEIL</a> </li> 
+			 <li><a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> PROMOTIONS </a></li> 
+			 <li><a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > DOUDOUS</a> </li> 
+				<li> <a id = "last" style="text-decoration:none" href="../page6/Quisommes.html">  QUI SOMMES-NOUS ? </a> </li> 
 			
 		</ul>
 
@@ -42,21 +42,21 @@
 
 	<main>
 
-		<article id="articles">
+		<nav id="articles">
 
-			<section class="listeart">
+			<div class="listeart">
 
 			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche1.png" alt = "peluche1"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> <del> 29,98 </del> 19,49€</p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche2.png" alt = "peluche2"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> <del> 79,98 </del> 49,99€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche2.png" alt = "peluche2"> <p>Doudou licorne rose, spécimen beaucoup trop rare pour être abandonné </p> <p class="prix"> <del> 79,98 </del> 49,99€ </p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche3.png" alt = "peluche3"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> <del> 49,98 </del> 29,99€</p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche3.png" alt = "peluche3"> <p>Doudou ourson, rien de plus banal... </p> <p class="prix"> <del> 49,98 </del> 29,99€</p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche4.png" alt = "peluche4"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> <del> 49,98 </del> 29,99€</p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche4.png" alt = "peluche4"> <p>Doudou Pikachu qui ne ressemple pas du tout à Pikachu</p> <p class="prix"> <del> 49,98 </del> 29,99€</p> </a>
 
-			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche5.png" alt = "peluche5"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> <del> 39,99 </del> 29,99€</p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche5.png" alt = "peluche5"> <p>Doudou spécial célibataire</p> <p class="prix"> <del> 39,99 </del> 29,99€</p> </a>
 
-			</section>
+			</div>
 
 			<div id="ordre"> 
 
@@ -71,7 +71,7 @@
 			<p> Nos promotions </p>
 			</div>
 
-		</article>
+		</nav>
 
 	</main>
 
@@ -81,14 +81,14 @@
 	<footer>
 
 		<div class="avis">
-			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a></p>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
-			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter  </a></p>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
