--- a/page10/article.html
+++ b/page10/article.html
@@ -19,10 +19,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> 
+		</div>
 
 
 	</header> 
@@ -30,20 +30,19 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> </a>
-			
+			<li><a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > ACCUEIL</a> </li> 
+			 <li><a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> PROMOTIONS </a></li> 
+			 <li><a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > DOUDOUS</a> </li> 
+			<li> <a id = "last" style="text-decoration:none" href="../page6/Quisommes.html">  QUI SOMMES-NOUS ? </a> </li> 
 		</ul>
 
 	</nav>
 
 	<main>
 
-		<article id="articles">
+		<nav id="articles">
 
-			<section id="descrart">
+			<div id="descrart">
 
 			<div class="description">
 			<p id="titredesc"> Description du produit </p>
@@ -55,8 +54,8 @@
 
 			<div class="ecrire">
 
-			<p> <label> Nom : &nbsp <input type="text"  > </label> </p>
-			<p> <label> Titre de votre avis : &nbsp <input type="text"> </label> </p>
+			<p> <label> Nom : &nbsp; <input type="text"  > </label> </p>
+			<p> <label> Titre de votre avis : &nbsp; <input type="text"> </label> </p>
 			<textarea style="width: 300px; height: 200px" placeholder="Votre commentaire"></textarea>
 			
 			<form action="../page10/article.html">
@@ -72,23 +71,23 @@
 
 			</div>
 
-			</section>
+			</div>
 
 
-			<section class="listeart">
+			<div class="listeart">
 
 			<a href="doudous1/peluche12.jpg" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2" title="Cliquer pour afficher l'image en grand"> </a>
 
 			<div id="carte"> 
 
 			<p> <strong class ="dispo"> Disponible </strong> </p>
-			<p> <strong> Réf. </strong> &nbsp DC3266 </p> 
-			<p> <strong> Code barre : </strong> &nbsp 3700335232660 </p> 
-			<p> <strong>Marque : </strong> &nbsp COCHONOU </p> 
+			<p> <strong> Réf. </strong> &nbsp; DC3266 </p> 
+			<p> <strong> Code barre : </strong> &nbsp; 3700335232660 </p> 
+			<p> <strong>Marque : </strong> &nbsp; COCHONOU </p> 
 			<p> <em>Dès la naissance</em> </p> 
-			<p> <strong>Taille : </strong> &nbsp 21cm </p> 
-			<p> <strong>Couleur : </strong> &nbsp Rose et noir </p> 
-			<p> <strong>Lavage : </strong> &nbsp 30° </p> 
+			<p> <strong>Taille : </strong> &nbsp; 21cm </p> 
+			<p> <strong>Couleur : </strong> &nbsp; Rose et noir </p> 
+			<p> <strong>Lavage : </strong> &nbsp; 30° </p> 
 
 			<div id="prix"> 
 
@@ -104,7 +103,7 @@
 
 			</div>
 
-			</section>
+			</div>
 
 			<div class="titreart"> 
 			<p class="recherche"> Doudou cochon sauvage </p>
@@ -113,7 +112,7 @@
 
 			
 			
-		</article>
+		</nav>
 
 	</main>
 
@@ -124,13 +123,13 @@
 
 		<div class="avis">
 			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
 			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
