--- a/page11/commande.html
+++ b/page11/commande.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,10 +20,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> 
+		</div>
 
 
 	</header> 
@@ -31,10 +31,10 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> </a>
+			<li><a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > ACCUEIL</a> </li> 
+			 <li><a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> PROMOTIONS </a></li> 
+			 <li><a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > DOUDOUS</a> </li> 
+			<li> <a id = "last" style="text-decoration:none" href="../page6/Quisommes.html">  QUI SOMMES-NOUS ? </a> </li> 
 		</ul>
 
 	</nav>
