--- a/page8/rechercher.html
+++ b/page8/rechercher.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,10 +20,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a>
+		</div>
 
 
 	</header> 
@@ -31,27 +31,26 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
-			
+			 <li> <a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" >ACCUEIL  </a></li>
+			 <li> <a id = "second" style="text-decoration:none" href= "../page4/Promotions.html">PROMOTIONS</a> </li> 
+			 <li> <a id = "third" style="text-decoration:none" href="../page3/Doudous.html"> DOUDOUS </a></li> 
+			 <li><a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> QUI SOMMES-NOUS ? </a> </li> 
 		</ul>
 
 	</nav>
 
 	<main>
 
-		<article id="articles">
+		<nav id="articles">
 
-			<section class="listeart">
+			<div class="listeart">
 
 			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche11.jpg" alt = "peluche1"> <p>Cochon rose à la peau très douce, aime particulèrement la boue</p> <p class="prix"> 30€ </p> </a>
 
 			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"> <p>Cochon sauvage qui n'apprécie que les enfants bagarreurs</p> <p class="prix"> 25€ </p> </a>
 
 
-			</section>
+			</div>
 
 			<div id="ordre"> 
 
@@ -71,7 +70,7 @@
 
 
 
-		</article>
+		</nav>
 
 	</main>
 
@@ -82,13 +81,13 @@
 
 		<div class="avis">
 			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
 			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
