--- a/page9/panier.html
+++ b/page9/panier.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,10 +20,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a>
+		</div>
 
 
 	</header> 
@@ -31,10 +31,10 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> </a>
+			 <li><a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > ACCUEIL </a></li> 
+			 <li> <a id = "second" style="text-decoration:none" href= "../page4/Promotions.html">PROMOTIONS</a> </li> 
+			 <li> <a id = "third" style="text-decoration:none" href="../page3/Doudous.html" >DOUDOUS</a> </li> 
+			 <li><a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> QUI SOMMES-NOUS ?  </a></li>
 			
 		</ul>
 
@@ -52,19 +52,33 @@
 		<table>
 
   		<tr>
-   		<th>Produit</th> <th colspan=2> Description</th> <th>Disponibilité</th> <th>Prix unitaire</th> <th>Quantité</th> <td></td> <th>Total</th>
+   		<th>Produit</th> <th> Description </th> <th>Disponibilité</th> <th>Prix unitaire</th> <th>Quantité</th> 
+   		<td></td> <th>Total</th>
   		</tr>
 
   		<tr>
-    	<td> <a href="../page9/panier.html"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"></td> <td colspan="2"> <a> <p>Doudou cochon sauvage</p> <p> Ref. DC3266</p> </td> <td>Disponible</td> <td>25€</td> <td> <input id="qt" type="number" value="1"> </td> <td> <a href="../page9/panier.html"><img src = "poubelle.png" alt = "poubelle"> </a> </td> <td>25€</td>
+    	<td><a href="../page9/panier.html"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"></a> </td> <td> <p>Doudou cochon sauvage</p> <p>Ref. DC3266</p> </td> <td>Disponible</td> <td>25€</td> <td> <input id="qt" type="number" value="1"> </td> <td> <a href="../page9/panier.html"><img src = "poubelle.png" alt = "poubelle"> </a> </td> <td>25€</td>
   		</tr>
 
   		<tr>
-    	<th colspan="3" rowspan="3"> <p> BONS DE REDUCTION </p> <p> <input type="text" placeholder ="Votre code"> <button> ok </button> </p> </th> <td colspan="3"> Total produit</td> <td colspan="2">21€</td></tr> <td colspan="3"> Frais de port </td> <td colspan="2">4€</td> </tr> <td colspan="3"> TOTAL </td> <td colspan="2">25€</td> </tr>
+    	<th colspan="3" rowspan="3"> <p> BONS DE REDUCTION </p> <p> <input type="text" placeholder ="Votre code"> <button> ok </button> </p> </th> 
+
+
+  		<td colspan="2"> Total produit</td> <td colspan="2">21€</td> 
+
+  		<tr>
+    	<td colspan="2"> Frais de port </td> <td colspan="2">4€</td> 
+		</tr>
+
+    	<tr> 
+    	<td colspan="2"> TOTAL </td> <td colspan="2">25€</td> 
+		</tr>
 
 		</table>
 
-		<a href="../page11/commande.html"><button id="boutachat"> Passer à l'achat </button></a>
+		<form action="../page11/commande.html">
+		<button id="boutachat"> Passer à l'achat </button>
+		</form>
 
 		</div>
 
@@ -76,14 +90,14 @@
 	<footer>
 
 		<div class="avis">
-			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<p> <a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
 			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
