--- a/page11/commande.html
+++ b/page11/commande.html
@@ -51,23 +51,41 @@
 		<table>
 
   		<tr>
-   		<th>Produit</th> <th colspan=2> Description</th> <th>Disponibilité</th> <th>Prix unitaire</th> <th>Quantité</th> <th>Total</th>
+   		<th>Produit</th> <th> Description</th> <th>Disponibilité</th> <th>Prix unitaire</th> <th>Quantité</th> <th>Total</th>
   		</tr>
 
   		<tr>
-    	<td> <a href="../page9/panier.html"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"></td> <td colspan="2"> <a> <p>Doudou cochon sauvage</p> <p> Ref. DC3266</p> </td> <td>Disponible</td> <td>25€</td> <td>1</td> <td>25€</td>
+
+    	<td> <a href="../page9/panier.html"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"> </a> </td> 
+
+    	<td> <p>Doudou cochon sauvage</p> <p> Ref. DC3266</p> </td> 
+
+    	<td>Disponible</td> 
+    	<td>25€</td> 
+    	<td>1</td> 
+    	<td>25€</td>
+
   		</tr>
 
   		<tr>
-    	<th colspan="3" rowspan="3"> </th> <td colspan="3"> Total produit</td> <td colspan="1">21€</td></tr> <td colspan="3"> Frais de port </td> <td colspan="1">4€</td> </tr> <td colspan="3"> TOTAL </td> <td colspan="1">25€</td> </tr>
+    	<th colspan="2" rowspan="3"> </th> <td colspan="3"> Total produit</td> <td colspan="1">21€</td> 
+    	</tr> 
+
+    	<tr>
+    	<td colspan="3"> Frais de port </td> <td colspan="1">4€</td> 
+    	</tr> 
+
+    	<tr>
+    	<td colspan="3"> TOTAL </td> <td colspan="1">25€</td> 
+    	</tr>
 
 		</table>
 
 		</div> 	
 
-		<section id="infocom1">
+		<nav id="infocom1">
 
-		<article id="infocom2">
+		<div id="infocom2">
 
 		<p id="premier"> <strong> 1. Informations sur la commande </strong> </p>
 
@@ -81,14 +99,14 @@
 		<div><label>Adresse :* &nbsp;<input></label></div>
 		<div><label>Code postal :* &nbsp;<input></label></div>
 		<div><label>Ville :* &nbsp;<input></label></div>
-		<div> Pays :* &nbsp;<select value="France"> <option>France</option> <option>Frence</option> <option>frensse</option> </select></div>
-		<div>Etat : &nbsp;<select value="France"> <option>Solide</option> <option>Liquide</option> <option>Gazeux</option> </select> </div>
+		<div> Pays :* &nbsp;<select> <option selected>France</option> <option>Frence</option> <option>frensse</option> </select></div>
+		<div>Etat : &nbsp;<select> <option>Solide</option> <option>Liquide</option> <option>Gazeux</option> </select> </div>
 		<div><label>E-mail :*&nbsp; <input></label></div>
 		<div><label>Téléphone :* &nbsp;<input></label></div>
 		<div><label><input type=checkbox> Je souhaite recevoir des nouvelles et des coupons de réduction.</label></div>
 
 		
-		<p id="second"> <strong> 2. Livraison </strong> </p>
+		<p id="second2"> <strong> 2. Livraison </strong> </p>
 
 		<table>
 
@@ -98,7 +116,7 @@
 
   		<tr>
     	<td rowspan="2"> 
-    	<form id="form1">
+    	<form id="form6">
 		<input type= "radio" name="transpo" value="lettre"> 
 		<input type= "radio" name="transpo" value="colis"> 
 		</form> 
@@ -108,7 +126,7 @@
   		</tr>
 
   		<tr>
-    	<td> Collisimo</td>  <td>Colissimo : Votre doudou avec son support en 48H </td> <td>6,50 €</td>
+    	<td> Colissimo</td>  <td>Colissimo : Votre doudou avec son support en 48H </td> <td>6,50 €</td>
     	</tr>
 
 		</table>
@@ -147,11 +165,16 @@
 
 		</table>
 
-		<a href="../page11/commande.html"><button id="boutachat"> Confirmer l'achat </button></a>
-			
-		</article>
+		<form action="../page11/commande.html">
 
-		</section>
+		<button id="boutachat"> Confirmer l'achat </button>
+
+		</form>
+
+			
+		</div>
+
+		</nav>
 
 		
 
@@ -166,13 +189,13 @@
 
 		<div class="avis">
 			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
 			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
