--- a/page6/Quisommes.html
+++ b/page6/Quisommes.html
@@ -41,8 +41,13 @@
 	</nav>
 
 	<main>
+     <img src="n3.png"> 
+     <div> <p> Nous sommes deux entrepreneurs passionnés par l'art de la fabrication des peluches, en particulier par celle des nounours.<br> 
+L’engouement de fabriquer et vendre des nounours apparut dès l’enfance, mais était restée cachés car à cette époque la vente des doudous n’était pas un domaine assez gratifiant.<br>
+  Nous décidâmes donc de poursuivre nos études en informatique et en même temps de travailler sur notre projet de doudou. Le projet n’évoluait pas du tout jusqu’au jour un amis nous demanda de lui fabriquer un doudou pour offrir comme cadeau de noël.<br>  Le jour de noël nous eûmes plusieurs retours de certains élevés qui avait vu notre doudou. Cet évènement marqua le début de <strong>Mondoutoudoux</strong>. <br> Très rapidement plusieurs élèves se mirent commander des doudous si bien que nous commençâmes à gagner un peu d’argent. Mais la crédibilité est acquise lorsque le directeur de l’université mit sur la table une somme de 1000 euros et nous demanda de lui fabriquer le plus beau nounours au monde pour qu’il puisse l’offrir à sa grand-mère. <br> La mission était délicate mais nous réussîmes à la finaliser.  
+En deuxième année nous créâmes notre premier site web pour avoir accès à un marché plus étendu. En 2010 le site enregistre 100 achats seulement.<br> Mais au fil du temps les choses se sont améliorés et le nombre d’acheteur atteint 1000 en 2012.<br> Aujourd’hui plus 1 million de personne ont effectué des achats sur le site.
 
-
+</p>
 	</main>
 
 
