--- a/page5/Commentaire.html
+++ b/page5/Commentaire.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,10 +20,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </p>
+		</div>
 
 
 	</header> 
@@ -31,30 +31,30 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
+			 <li><a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > ACCUEIL</a> </li> 
+			 <li><a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> PROMOTIONS </a></li> 
+			 <li><a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > DOUDOUS</a> </li> 
+			 <li> <a id = "last" style="text-decoration:none" href="../page6/Quisommes.html">  QUI SOMMES-NOUS ? </a> </li> 
 			
 		</ul>
 
 	</nav>
 	
 	<main>
-	<ul>
-	
-	<li><label>Nom : <input type="text" ></label></li>
-	<li><label>Prénom : <input></label></li>
-	<li><label>Adresse(rue, ville, pays) : <input class="champ" placeholder="rue"></label></li>
-	<li><input class="champ" placeholder="Ville"></label></li>
-	<li> <input class="champ" placeholder="Pays"></label></li>
-	<li><label>Téléphone  : <input></label></li>
-	<li><label>Adresse Mail : <input></label></li>
-	</ul>
-	<textarea style="width: 300px; height: 200px" placeholder="votre commentaire ici "> </textarea> 
-	
-	<button> Envoyé</button>
-	<button> Annuler </button>
+
+	<nav>
+		
+	<p id="interet"> Votre avis nous intéresse ! </p>
+
+	<div><label>Nom: &nbsp;<input></label></div>
+	<div><label>Prénom : &nbsp;<input></label></div>
+	<div><label>E-mail :&nbsp; <input></label></div>
+	<div><label>Téléphone : &nbsp;<input></label></div>
+
+	<textarea style="width: 300px; height: 200px" placeholder="Votre commentaire"></textarea> 
+	<button> Envoyer</button> 
+
+	</nav>
 	
 	</main>
 
@@ -65,13 +65,13 @@
 
 		<div class="avis">
 			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
 			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
