--- a/page7/contacter.html
+++ b/page7/contacter.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,10 +20,10 @@
 
 		</form>
 
-		<ul>
+		<div>
 			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
-		</ul>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> 
+		</div>
 
 
 	</header> 
@@ -31,19 +31,19 @@
 	<nav id="menu2">
 
 		<ul> 
-			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
+			<li><a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > ACCUEIL</a> </li> 
+			 <li><a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> PROMOTIONS </a></li> 
+			 <li><a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > DOUDOUS</a> </li> 
+			<li> <a id = "last" style="text-decoration:none" href="../page6/Quisommes.html">  QUI SOMMES-NOUS ? </a> </li> 
 			
 		</ul>
 
 	</nav>
 
 	<main>
-	<p><strong> Nous sommes toujours à votre disposition</strong> </p>
+	<p class ="phcontact"> Contactez-nous ! Nous sommes à votre entière disposition.  </p>
 	<p> <img src = "tel.png"  alt = "Téléphone" > Téléphone : 0611802587</p>
-	<p> <img src = "mail.png"  alt = "mail" > Mail : <a href="">  Mondoudou.toutdoux@gmail.com</a></p>
+	<p> <img src = "mail.png"  alt = "mail" > Mail : <a href="">  MonDoudou@gmail.com</a></p>
 	<p> <img src = "gg.png"  alt = "adr" > Adresse : <a href=""> 143 Rue des peluches </a> </p>
 	
 
@@ -56,13 +56,13 @@
 
 		<div class="avis">
 			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
 			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
