--- a/page3/Doudous.html
+++ b/page3/Doudous.html
@@ -93,14 +93,14 @@
 	<footer>
 
 		<div class="avis">
-			<a style="text-decoration:none" href="../page5/commentaire.html"><p> Votre avis </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<a style="text-decoration:none" href="../page5/commentaire.html"><p> Votre avis </p> </a>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
-			<a style="text-decoration:none" href="../page7/contacter.html"><p> Nous contacter </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<a style="text-decoration:none" href="../page7/contacter.html"><p> Nous contacter </p> </a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
