--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -98,10 +98,10 @@
 		
 		<div id="listevente">
 
-			<a href="../page5/commentaire.html"> <img src="avis1/comm1.png" alt="avis1"/></a>
-			<a href="../page5/commentaire.html"> <img src="avis1/comm2.png" alt="avis2"/></a>
-			<a href="../page5/commentaire.html"> <img src="avis1/comm4.png" alt="avis3"/></a>
-			<a href="../page5/commentaire.html"> <img src="avis1/comm5.png" alt="avis4"/></a>
+			<a href="../page5/Commentaire.html"> <img src="avis1/comm1.png" alt="avis1"/></a>
+			<a href="../page5/Commentaire.html"> <img src="avis1/comm2.png" alt="avis2"/></a>
+			<a href="../page5/Commentaire.html"> <img src="avis1/comm4.png" alt="avis3"/></a>
+			<a href="../page5/Commentaire.html"> <img src="avis1/comm5.png" alt="avis4"/></a>
 	
 			
 		</div>
@@ -120,7 +120,7 @@
 	<footer>
 
 		<div class="avis">
-			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
+			<p><a style="text-decoration:none" href="../page5/Commentaire.html"> Votre avis </a> </p>
 			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
