--- a/page3/Doudous.html
+++ b/page3/Doudous.html
@@ -93,7 +93,7 @@
 	<footer>
 
 		<div class="avis">
-			<a style="text-decoration:none" href="../page5/commentaire.html"><p> Votre avis </p> </a>
+			<a style="text-decoration:none" href="../page5/Commentaire.html"><p> Votre avis </p> </a>
 			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
