--- a/page8/rechercher.html
+++ b/page8/rechercher.html
@@ -80,7 +80,7 @@
 	<footer>
 
 		<div class="avis">
-			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
+			<p><a style="text-decoration:none" href="../page5/Commentaire.html"> Votre avis </a> </p>
 			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
